name:                change-instrument
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jakob Jarmar
maintainer:          jakob.j@gmail.com
-- copyright:           
category:            Sound
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable change-instrument
  main-is:             Main.hs
  other-modules:       Filter, Instances
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.9,
                       containers, event-list,
                       midi, optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010
